current status of adjusted routes
